--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,73 @@
 version: '3'
-services:
+services: 
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 22181:2181
+    networks:
+      - bigdata
+  
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - 29092:29092
+    networks:
+      - bigdata
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  
+  spark:
+    image: docker.io/bitnami/spark:3
+    environment:
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    ports:
+      - '8080:8080'
+      - '7077:7077'
+    networks:
+      - bigdata
+
+  spark-worker-01:
+    image: docker.io/bitnami/spark:3
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    networks:
+      - bigdata
+
+  spark-worker-02:
+    image: docker.io/bitnami/spark:3
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=1G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    networks:
+      - bigdata
+
   es01:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
     container_name: es01
@@ -17,9 +85,10 @@ services:
     volumes:
       - data01:$HOME/elasticsearch/data
     ports:
-      - 9300:9200
+      - 9200:9200
     networks:
       - bigdata
+
   es02:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
     container_name: es02
@@ -38,6 +107,7 @@ services:
       - data02:$HOME/elasticsearch/data
     networks:
       - bigdata
+
   es03:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
     container_name: es03
@@ -56,41 +126,28 @@ services:
       - data03:$HOME/elasticsearch/data
     networks:
       - bigdata
+      
   kibana:
     image: docker.elastic.co/kibana/kibana:7.15.2
     container_name: kibana
     ports:
-      - 5901:5601
+      - 5601:5601
     environment:
       - ELASTICSEARCH_HOSTS="http://es01:9200"
     networks:
       - bigdata
-
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - 22181:2181
-    networks:
-      - bigdata
-  
-  kafka:
-    image: confluentinc/cp-kafka:latest
+    
+  runner:
+    image: runner:0.1
+    container_name: runner
     depends_on:
-      - zookeeper
-    ports:
-      - 29083:29083
+      - kafka
+    volumes:
+      - ./src:/opt/bitnami/spark/app
+    command: "-f /dev/null"
+    entrypoint: /usr/bin/tail
     networks:
       - bigdata
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29083
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
 volumes:
   data01:
